Bug 119122 - Area tab: Pattern editor has incorrect behaviour switching the pattern
Summary: Area tab: Pattern editor has incorrect behaviour switching the pattern
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, regression
: 119859 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-06 12:20 UTC by Xisco Faulí
Modified: 2018-09-14 10:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-08-06 12:20:24 UTC
In Writer:

1) Menu > Format > Paragraph
Paragraph dialog opens
2) Area tab > Pattern button

-> The pattern editor shows the 3 rows on top completely black.

--> Only 2 squares should be black.

3) click on the second pattern ( 1 row, middle )

-> The pattern editor shows the 2 rows on top completely black.

--> Only 3 squares should be black.

4) Click on the first pattern again

-> the pattern editor behaves correctly now.

5) Click again on the first pattern.

-> The problem is reproduced again...
Comment 1 Xisco Faulí 2018-08-06 12:25:38 UTC
The pattern editor got broken in https://cgit.freedesktop.org/libreoffice/core/commit/?id=66dbd4da3afcadb1393daf9be9cecff71b86509a until it got fixed in https://cgit.freedesktop.org/libreoffice/core/commit/?id=25cd843664919974f0d21ca7a0b02cc43e9eeabb, where the behaviour is already reproducible...
Comment 2 Telesto 2018-08-06 15:36:07 UTC
Repro
Version: 6.2.0.0.alpha0+
Build ID: 1b21ff86effe58ae368457de8fec654ba4c8edd9
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-30_03:13:35
Locale: en-US (nl_NL); Calc: CL
Comment 3 Jim Raykowski 2018-08-12 18:53:08 UTC
Here is a patch for consideration:
https://gerrit.libreoffice.org/#/c/58903/
Comment 4 Commit Notification 2018-08-28 18:47:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c91705505c6f1e22a0bb5b794b39267c6b11136

tdf#119122 first (5%) pattern initially drawn with too many black cells

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-08-28 18:48:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b50e03fd9b56bcedf1dcc7ccfd16b223e39271bc&h=libreoffice-6-1

tdf#119122 first (5%) pattern initially drawn with too many black cells

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2018-08-28 18:49:48 UTC
sorry for the duplicate fix, I stumbled onto the problem while working on something else
Comment 7 Jim Raykowski 2018-08-28 19:41:22 UTC
No worries, although my fix works, I think your fix is a bit better :-)
Comment 8 Xisco Faulí 2018-09-14 10:09:37 UTC
*** Bug 119859 has been marked as a duplicate of this bug. ***