tdf#119122 Fix pattern editor incorrect behaviour

Change-Id: I4826a8c33e158cc6b0701e05525350b5b02581b1